--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,7 +12,6 @@ jobs:
 
     strategy:
       fail-fast: false
-      max-parallel: 4
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
 
@@ -25,11 +24,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
+          cache-dependency-path: cams/requirements.txt
 
-      - name: Install Django (and upgrade pip)
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "Django>=4.2,<6"
+          pip install -r cams/requirements.txt
 
       - name: Run migrations
         working-directory: cams
